--- a/classes/GraphDBDocumentArray.html
+++ b/classes/GraphDBDocumentArray.html
@@ -25,7 +25,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">GraphDBDocumentArray</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/7def6e3/src/graphDBDocumentArray.js#L44">src/graphDBDocumentArray.js:44</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/a7b7b83/src/graphDBDocumentArray.js#L44">src/graphDBDocumentArray.js:44</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -857,7 +857,7 @@ If the array is empty, undefined is returned and the array is not modified.</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/7def6e3/src/graphDBDocumentArray.js#L52">src/graphDBDocumentArray.js:52</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/a7b7b83/src/graphDBDocumentArray.js#L52">src/graphDBDocumentArray.js:52</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="populateMultiple" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>populate<wbr/>Multiple</span><a href="#populateMultiple" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -879,7 +879,7 @@ Breadth first populate for combining queries.</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/7def6e3/src/graphDBDocumentArray.js#L63">src/graphDBDocumentArray.js:63</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/a7b7b83/src/graphDBDocumentArray.js#L63">src/graphDBDocumentArray.js:63</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="push" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>push</span><a href="#push" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
@@ -1293,7 +1293,7 @@ To Plain JS Object, not a string.</p>
 </div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">object</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/7def6e3/src/graphDBDocumentArray.js#L216">src/graphDBDocumentArray.js:216</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/a7b7b83/src/graphDBDocumentArray.js#L208">src/graphDBDocumentArray.js:208</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="toLocaleString" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>to<wbr/>Locale<wbr/>String</span><a href="#toLocaleString" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
@@ -1595,6 +1595,7 @@ To Plain JS Object, not a string.</p>
 <li><a href="MongoDBIdGenerator.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>MongoDBId<wbr/>Generator</span></a></li>
 <li><a href="RedisIdGenerator.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>Redis<wbr/>Id<wbr/>Generator</span></a></li>
 <li><a href="Transaction.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>Transaction</span></a></li>
+<li><a href="UUIDGenerator.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>UUIDGenerator</span></a></li>
 <li><a href="../interfaces/GraphDBPropertyOptions.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg><span>GraphDBProperty<wbr/>Options</span></a></li>
 <li><a href="../interfaces/GraphDBSchema.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>GraphDBSchema</span></a></li>
 <li><a href="../interfaces/GraphDBUtilsConfig.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>GraphDBUtils<wbr/>Config</span></a></li>
@@ -1616,6 +1617,7 @@ To Plain JS Object, not a string.</p>
 <li><a href="../functions/addNamespace.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-64-path"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)" id="icon-64-text"></path></svg><span>add<wbr/>Namespace</span></a></li>
 <li><a href="../functions/createGraphDBModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>create<wbr/>GraphDBModel</span></a></li>
 <li><a href="../functions/createRepository.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>create<wbr/>Repository</span></a></li>
+<li><a href="../functions/extractId.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>extract<wbr/>Id</span></a></li>
 <li><a href="../functions/getDefaultRepositoryConfig.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Default<wbr/>Repository<wbr/>Config</span></a></li>
 <li><a href="../functions/getGraphDBAttribute.html" class="tsd-is-private"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBAttribute</span></a></li>
 <li><a href="../functions/getGraphDBVersion.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBVersion</span></a></li>
