--- a/enums/DeleteType.html
+++ b/enums/DeleteType.html
@@ -16,7 +16,7 @@
 <li><a href="DeleteType.html">DeleteType</a></li></ul>
 <h1>Enumeration DeleteType</h1></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/05d1332/src/helpers.ts#L100">src/helpers.ts:100</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5492f4c/src/helpers.ts#L100">src/helpers.ts:100</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -33,12 +33,12 @@
 <h3 class="tsd-anchor-link"><span>CASCADE</span><a href="#CASCADE" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-enum-member">CASCADE</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">0</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/05d1332/src/helpers.ts#L101">src/helpers.ts:101</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5492f4c/src/helpers.ts#L101">src/helpers.ts:101</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="NON_CASCADE" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>NON_<wbr/>CASCADE</span><a href="#NON_CASCADE" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-enum-member">NON_<wbr/>CASCADE</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">1</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/05d1332/src/helpers.ts#L102">src/helpers.ts:102</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5492f4c/src/helpers.ts#L102">src/helpers.ts:102</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -97,6 +97,7 @@
 <li><a href="../variables/Helpers.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Helpers</span></a></li>
 <li><a href="../variables/SPARQL.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>SPARQL</span></a></li>
 <li><a href="../variables/Types.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Types</span></a></li>
+<li><a href="../variables/debug.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>debug</span></a></li>
 <li><a href="../variables/defaultOptions.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>default<wbr/>Options</span></a></li>
 <li><a href="../variables/idGenerator-1.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>id<wbr/>Generator</span></a></li>
 <li><a href="../variables/namespaces.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>namespaces</span></a></li>
