--- a/types/GDBType.html
+++ b/types/GDBType.html
@@ -17,7 +17,7 @@
 <h1>Type alias GDBType</h1></div>
 <div class="tsd-signature"><span class="tsd-kind-type-alias">GDBType</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">StringConstructor</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">NumberConstructor</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">DateConstructor</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">BooleanConstructor</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;owl:NamedIndividual&quot;</span><span class="tsd-signature-symbol"> | </span><a href="GraphDBModelConstructor.html" class="tsd-signature-type tsd-kind-type-alias">GraphDBModelConstructor</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="GraphDBModelConstructor.html" class="tsd-signature-type tsd-kind-type-alias">GraphDBModelConstructor</a><span class="tsd-signature-symbol">)</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/05d1332/src/graphDBSchema.ts#L13">src/graphDBSchema.ts:13</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5492f4c/src/graphDBSchema.ts#L13">src/graphDBSchema.ts:13</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -70,6 +70,7 @@
 <li><a href="../variables/Helpers.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Helpers</span></a></li>
 <li><a href="../variables/SPARQL.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>SPARQL</span></a></li>
 <li><a href="../variables/Types.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Types</span></a></li>
+<li><a href="../variables/debug.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>debug</span></a></li>
 <li><a href="../variables/defaultOptions.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>default<wbr/>Options</span></a></li>
 <li><a href="../variables/idGenerator-1.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>id<wbr/>Generator</span></a></li>
 <li><a href="../variables/namespaces.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>namespaces</span></a></li>
