--- a/types/onDataCb.html
+++ b/types/onDataCb.html
@@ -33,7 +33,7 @@
 <h5><span class="tsd-signature-symbol">[</span><span class="tsd-kind-parameter">key</span>: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type ">Term</span></h5></li></ul></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/05d1332/src/graphDB.ts#L24">src/graphDB.ts:24</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5492f4c/src/graphDB.ts#L24">src/graphDB.ts:24</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -86,6 +86,7 @@
 <li><a href="../variables/Helpers.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Helpers</span></a></li>
 <li><a href="../variables/SPARQL.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>SPARQL</span></a></li>
 <li><a href="../variables/Types.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Types</span></a></li>
+<li><a href="../variables/debug.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>debug</span></a></li>
 <li><a href="../variables/defaultOptions.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>default<wbr/>Options</span></a></li>
 <li><a href="../variables/idGenerator-1.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>id<wbr/>Generator</span></a></li>
 <li><a href="../variables/namespaces.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>namespaces</span></a></li>
