--- a/variables/SPARQL.html
+++ b/variables/SPARQL.html
@@ -118,7 +118,7 @@ i.e. cp:Client</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4></li></ul></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/05d1332/src/helpers.ts#L7">src/helpers.ts:7</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5492f4c/src/helpers.ts#L7">src/helpers.ts:7</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -171,6 +171,7 @@ i.e. cp:Client</p>
 <li><a href="Helpers.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Helpers</span></a></li>
 <li><a href="SPARQL.html" class="current"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>SPARQL</span></a></li>
 <li><a href="Types.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>Types</span></a></li>
+<li><a href="debug.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>debug</span></a></li>
 <li><a href="defaultOptions.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>default<wbr/>Options</span></a></li>
 <li><a href="idGenerator-1.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>id<wbr/>Generator</span></a></li>
 <li><a href="namespaces.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg><span>namespaces</span></a></li>
